Port structured payload segments and tz param to PL endpoint
